--- a/assignment3.tex
+++ b/assignment3.tex
@@ -12,7 +12,7 @@ Just a simple \LaTeX\ file.
 
 \vspace*{-5pt}
 \begin{figure}[h!]
-\includegraphics[width=0.70\textwidth]{fig_fold2}
+\includegraphics[width=0.70\textwidth]{plot.png}
 \vspace*{-5pt}
 \caption{Folding explained.}
 \label{fig_folding} 
